2010-04-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_mpd.c: FIX: issue 74. Respect environment variable MPD_HOST and MPD_PORT

	* src/ol_config_property.h (config_str): CHANGE: remove settings for MPD

	* src/ol_option.c (ol_option_startup_player_changed): FIX: issue 78, the text entry of customize player startup command can is sensitive now

2010-04-01  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_mouse_timer): FIX: Mouse translucent sometimes doesn't work

2010-03-31  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: FIX: Add X11 lib dependency to fix issue 72

	* src/ol_player_amarok1.h (ol_player_amarok1_get): FIX: Fix the declare of amarok1 player handler

	* src/ol_osd_window.c (ol_osd_window_mouse_timer): FIX: Check the pointer relative to osd_window other than to the whole widget

2010-03-30  Tiger Soldier  <tigersoldi@gmail.com>

	* NEWS: New version release: 0.3.20100330

	* src/ol_osd_window.c (ol_osd_window_set_lyric): FIX: Repaint lyrics window directly when settting lyric text

	* src/ol_osd_module.c (ol_osd_module_set_lrc): FIX: Clear displaying lyrics if a NULL lrc is set

2010-03-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_config_property.h: Make MiniLyrics the default lyric download engine.

	* src/tests/Makefile.am: CHANGE: Use an universal LDADD for all tests.

	* src/ol_lrc.c (ol_lrc_new): FIX: issue 70, add an extra empty lyric at the end to avoid lack of lyric text.

	* src/ol_main.c: CHANGE: Check whether music has been changed every second. This should fix issue 69.

	* src/ol_lrc_fetch_minilyrics.c (ol_lrc_fetch_minilyrics_download): FIX: Detect encoding of downloaded lyrics.
	FIX: Decode XML special characters in search results

	* src/ol_lrc.c (_init_lrc): FIX: Initialize offset of LRC Parser.

	* src/ol_lrc_fetch_minilyrics.c: ADD: Support download from MiniLyrics

2010-03-28  Tiger Soldier  <tigersoldi@gmail.com>
